@@ -24,8 +24,6 @@ import java.io.File;
 import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Project;
 import org.apache.tools.ant.Task;
-import org.apache.tools.ant.types.Path;
-import org.apache.tools.ant.util.FileUtils;
 
 /**
  * Base class for bb tools tasks.  This class handles setting and
@@ -57,26 +55,6 @@ public abstract class BaseTask
       } else {
          throw new BuildException("jde home must be a directory");
       }
-   }
-   
-   /**
-    * Checks all elements in the source path against the target file
-    * for "out of date" ness.
-    * @param src
-    * @param target
-    * @return true if one or more source files are newer than the target
-    */
-   protected boolean isOutOfDate(Path src, File target) {
-      boolean outOfDate = false;
-      
-      String[] items = src.list();
-      for (int i=0; i<items.length && !outOfDate; i++) {
-         if (!FileUtils.getFileUtils().isUpToDate(new File(items[i]), target)) {
-            outOfDate = true;
-         }
-      }
-      
-      return outOfDate;
    }
    
    @Override
